Add todo's and many ways to make money.

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/captain-huts.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/captain-huts.html
@@ -54,5 +54,13 @@
 {% endblock %}
 
 {% block misc %}
-    <p>no misc</p>
+    <p>
+        It is feasible to make a profit out of robbing some of the nobles here.
+        In one night a rogue can make 1d20 * 400 in an evening in this area.
+    </p>
+    <p>
+        Stealing is never without risks and every night there is probably an incident where the rogue almost gets caught.
+        After stealing 10.000 euro in the city there starts to a lot more awareness.
+        Per 10.000 gp there is a +10% change that a night goes horribly wrong and the rogue gets caught successfully.
+    </p>
 {% endblock %}
