--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/dock-nobles.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/dock-nobles.html
@@ -1,6 +1,6 @@
 {% extends "dnd/abstract/place.html" %} {# TODO: update #}
 
-{% block todo %}bad talk about the new-city{% endblock %}
+{% block todo %}bad talk about the new-city, earn 750 as illusionist{% endblock %}
 
 {% block title %}No title{% endblock %}
 {% block summary %}No summary{% endblock %}
