--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/outside-the-walls.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/outside-the-walls.html
@@ -2,6 +2,7 @@
 
 {% block title %}No title{% endblock %}
 {% block summary %}No summary{% endblock %}
+{% block todo %}earn 750 a day as illusionist, mad preacher{% endblock %}
 
 {% block events %}
     <p>no events</p>
