--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/south-side-nobles.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/south-side-nobles.html
@@ -1,15 +1,27 @@
 {% extends "dnd/abstract/place.html" %} {# TODO: update #}
 
-{% block title %}No title{% endblock %}
-{% block summary %}No summary{% endblock %}
-{% block todo %}appartment of Rafana, appartment of Morabar, Pomin's appartment{% endblock %}
+{% block title %}South Side Nobles{% endblock %}
+{% block summary %}An area where upcoming merchants have their house{% endblock %}
+{% block todo %}ocean's lust tip by people going home{% endblock %}
 
 {% block events %}
     <p>no events</p>
 {% endblock %}
 
 {% block locations %}
-    <p>no locations</p>
+    <p><b>
+        Although this part of the city is not very sunny for most of the day. You wouldn't mind living here as it is clearly a better part.
+        You see more apartments than big houses, but the buildings are sturdy and far away from the smell of the slums and harbor.
+        On the streets you see a lot of young merchants, that all seem to have a taste for fashion and especially exorbitant jewels.
+    </b></p>
+
+    <p>It is hard to distinguish one house from another and locations below can't be reached unless they know they want to go there.</p>
+
+    <ul>
+        <li>The apartment of <a href="../../../characters/Thekesh-Moltabar+naieve-entrepeneur.html">Morabar</a></li>
+        <li>The apartment of <a href="../../../characters/Rafana+lady-of-the-pink-tree.html">Rafana</a></li>
+        <li><a href="../../../characters/Pomin+gnome-cormyr-spy.html">Pomin's</a> apartment</li>
+    </ul>
 {% endblock %}
 
 {% block achievements %}
@@ -37,5 +49,13 @@
 {% endblock %}
 
 {% block misc %}
-    <p>no misc</p>
+    <p>
+        It is feasible to make a profit out of robbing some of the nobles here.
+        In one night a rogue can make 1d20 * 200 in an evening in this area.
+    </p>
+    <p>
+        Stealing is never without risks and every night there is probably an incident where the rogue almost gets caught.
+        After stealing 10.000 euro in the city there starts to a lot more awareness.
+        Per 10.000 gp there is a +10% change that a night goes horribly wrong and the rogue gets caught successfully.
+    </p>
 {% endblock %}
