--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/poor-mans-gate.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/poor-mans-gate.html
@@ -2,6 +2,7 @@
 
 {% block title %}Poor Mans Gate{% endblock %}
 {% block summary %}Entrance to the city mostly used by farmers and the less wealthy.{% endblock %}
+{% block todo %}people trying to get people to come to the city center{% endblock %}
 
 {% block events %}
     <p>no events</p>
