--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/north-side-nobles.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/north-side-nobles.html
@@ -2,7 +2,7 @@
 
 {% block title %}No title{% endblock %}
 {% block summary %}No summary{% endblock %}
-{% block todo %}statue of donkey, house of Wehna and Harar, FTG headquarters, accountants agency{% endblock %}
+{% block todo %}statue of donkey, house of Wehna and Harar, FTG headquarters, accountants agency, ruined FTG investor{% endblock %}
 
 {% block events %}
     <p>no events</p>
@@ -37,5 +37,21 @@
 {% endblock %}
 
 {% block misc %}
-    <p>no misc</p>
+    <h4>Stealing</h4>
+    <p>
+        It is feasible to make a profit out of robbing some of the nobles here.
+        In one night a rogue can make 1d20 * 300 in an evening in this area.
+    </p>
+    <p>
+        Stealing is never without risks and every night there is probably an incident where the rogue almost gets caught.
+        After stealing 10.000 euro in the city there starts to a lot more awareness.
+        Per 10.000 gp there is a +10% change that a night goes horribly wrong and the rogue gets caught successfully.
+    </p>
+    <h4>Counterfeiting</h4>
+    <p>
+        As an illusionist it is possible to counterfeit the fake currency that they have in Sembia.
+        Every amount spend below 2000 is safe. Money above 2000 will be checked and casters need to succeed on SpellcraftDC30 to pass a casual test.
+        After counterfeiting 10.000 euro there is a higher change of a thorough investigation that surely fails unless epic magic is involved.
+        Per 10.000 gp there is a +10% change that money used in a transaction is fake.
+    </p>
 {% endblock %}
