Add Dralen into the mix.

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/north-side-nobles.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/north-side-nobles.html
@@ -2,7 +2,7 @@
 
 {% block title %}No title{% endblock %}
 {% block summary %}No summary{% endblock %}
-{% block todo %}statue of donkey, house of Wehna and Harar, FTG headquarters, accountants agency, ruined FTG investor{% endblock %}
+{% block todo %}statue of donkey, house of Wehna and Harar, FTG headquarters, accountants agency, ruined FTG investor, house of Dralen{% endblock %}
 
 {% block events %}
     <p>no events</p>
