Finish south side nobles.

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/south-side-nobles.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/south-side-nobles.html
@@ -1,11 +1,15 @@
-{% extends "dnd/abstract/place.html" %} {# TODO: update #}
+{% extends "dnd/abstract/place.html" %}
 
 {% block title %}South Side Nobles{% endblock %}
 {% block summary %}An area where upcoming merchants have their house{% endblock %}
-{% block todo %}ocean's lust tip by people going home{% endblock %}
 
 {% block events %}
-    <p>no events</p>
+    <p>
+        During the morning two drunk men stroll the streets.
+        As soon as they notice the adventurers they try to make contact and see if they have any beer.
+        When asked one man indicates they came from the Ocean's Pleasure, where else, upon which the other hushes him,
+        as "it doesn't exist".
+    </p>
 {% endblock %}
 
 {% block locations %}
