Adding more people and giving better structure to the city.

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/captain-huts.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/captain-huts.html
@@ -21,6 +21,13 @@
         <li>House of <a href="../../../characters/Dragbar+metal-merchant.html">Dragbar</a></li>
         <li>House of <a href="../../../characters/Otalan+food-and-drink-merchant.html">Otalan</a></li>
     </ul>
+
+    <p>From here adventurers can go to:</p>
+    <ul>
+        <li>Down any ramp to <a href="../trade-district/the-goods.html">The goods</a></li>
+        <li>South towards <a href="north-side-nobles.html">North side nobles</a></li>
+        <li>To the far end of the city towards <a href="northern-tower.html">The Northern Tower</a> (that holds the library)</li>
+    </ul>
 {% endblock %}
 
 {% block achievements %}
