--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/dock-nobles.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/dock-nobles.html
@@ -16,6 +16,11 @@
     <p>It used to be a poor part of the city, but thanks to FTG it is blooming business.</p>
 
     <p>About: Fake gold</p>
+
+    <p>From here adventurers can go to:</p>
+    <ul>
+        <li>Walk towards the harbor for <a href="../trade-district/temple-of-Waukeen.html">the Waukeen temple</a>.</li>
+    </ul>
 {% endblock %}
 
 {% block achievements %}
