--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/northern-tower.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/northern-tower.html
@@ -1,23 +1,29 @@
-{% extends "dnd/abstract/place.html" %} {# TODO: update #}
+{% extends "dnd/abstract/place.html" %}
 
-{% block title %}No title{% endblock %}
-{% block summary %}No summary{% endblock %}
-{% block todo %}library, phase spider{% endblock %}
+{% block title %}Northern Tower{% endblock %}
+{% block summary %}The city library{% endblock %}
 
 {% block events %}
-    <p>no events</p>
+    <p>
+        When spending some time in the library <a href="../../../characters/Berdo+Librarian.html">Berdo</a> comes up to the adventurers
+        to ask if they need anything. He tells them that even though he works for the city he does not have a lot to do in general and says he can easily do work on the side.
+        He then offers his services to do research on any topic that they may need information on. He'll research for 50gp a day.
+    </p>
 {% endblock %}
 
 {% block locations %}
-    <p>no locations</p>
+    <p><b>
+        As the need for defensive from land decreased the guard towers took on different purposes.
+        This one holds the city library. The 5 stories high building holds closets full of books.
+    </b></p>
 {% endblock %}
 
 {% block achievements %}
-    <p>no achievements</p>
+    <p>LEAD: librarian is a spy for Red Thay</p>
 {% endblock %}
 
 {% block creatures %}
-    <p>no creatures</p>
+    <p>The librarian is called <a href="../../../characters/Berdo+Librarian.html">Berdo</a> a man who seems rather young for the office.</p>
 {% endblock %}
 
 {% block traps %}
