--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/outside-the-walls.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/outside-the-walls.html
@@ -10,6 +10,11 @@
 
 {% block locations %}
     <p>This area should breath the atmosphere of Almere.</p>
+
+    <p>From here adventurers can go to:</p>
+    <ul>
+        <li>Inside the city through <a href="../trade-district/poor-mans-gate.html">poor mans gate</a>.</li>
+    </ul>
 {% endblock %}
 
 {% block achievements %}
