--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/south-side-nobles.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/south-side-nobles.html
@@ -17,6 +17,7 @@
         Although this part of the city is not very sunny for most of the day. You wouldn't mind living here as it is clearly a better part.
         You see more apartments than big houses, but the buildings are sturdy and far away from the smell of the slums and harbor.
         On the streets you see a lot of young merchants, that all seem to have a taste for fashion and especially exorbitant jewels.
+        The most luxurious inn in town called "The Golden Deal" is situated in this part of the city.
     </b></p>
 
     <p>It is hard to distinguish one house from another and locations below can't be reached unless they know they want to go there.</p>
@@ -25,7 +26,18 @@
         <li>The apartment of <a href="../../../characters/Thekesh-Moltabar+naieve-entrepeneur.html">Morabar</a></li>
         <li>The apartment of <a href="../../../characters/Rafana+lady-of-the-pink-tree.html">Rafana</a></li>
         <li><a href="../../../characters/Pomin+gnome-cormyr-spy.html">Pomin's</a> apartment</li>
+        <li>Apartment of the librarian called <a href="../../../characters/Berdo+Librarian.html">Berdo</a></li>
     </ul>
+
+    <p>From here adventurers can go to:</p>
+    <ul>
+        <li>Down the ramp past the market to <a href="../trade-district/city-center.html">City center</a></li>
+        <li>Across the walking bridges over <a href="../trade-district/big-market/index.html">the market</a> to <a href="south-side-nobles.html">south side nobles</a></li>
+        <li><a href="../trade-district/poor-mans-gate.html">Poor mans gate</a></li>
+        <li>South entrance of the <a href="../trade-district/big-market/index.html">big market</a></li>
+        <li><a href="the-fort.html">The fort</a></li>
+    </ul>
+
 {% endblock %}
 
 {% block achievements %}
@@ -45,7 +57,17 @@
 {% endblock %}
 
 {% block knowledges %}
-   <p>no knowledges</p>
+    <p>There is a luxurious inn. If it is open the adventures can get some info with a bottle of fine wine (10gp)</p>
+    <dl class="dc">
+        <dt>GatherDC:</dt>
+        <dd>10 >= Houses will loose their value if the poor are going to stink in their back yards. These plans have to stop.</dd>
+        <dd>
+            15 >= Global Convoy project is an excellent investment. The ROI is higher than anywhere else and the Faurun Trade Group is very reliable.
+            Ask for it at the <a href="../trade-district/traders-guild.html">traders guild</a>.
+        </dd>
+        <dd>18 >= Waukeen is an important backer of the Global Convoy Project.</dd>
+        <dd>20 >= The hulorn would do well to fear Waukeen a little bit more, before he allows the houses to devalue.</dd>
+    </dl>
 {% endblock %}
 
 {% block items %}
