--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/city-center.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/city-center.html
@@ -2,7 +2,6 @@
 
 {% block title %}City Center{% endblock %}
 {% block summary %}District consisting mostly of common houses and some nice places to spend coin.{% endblock %}
-{% block todo %}add achievement for frisking Mirika{% endblock %}
 
 {% block events %}
     <p>no events</p>
@@ -36,7 +35,7 @@
 {% endblock %}
 
 {% block achievements %}
-    <p>no achievements</p>
+    <p>Frisked Mirika and asked inn keep about the key: handout 11-Mirikas-endeavor.odt</p>
 {% endblock %}
 
 {% block creatures %}
