--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/food-market.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/food-market.html
@@ -11,6 +11,7 @@
     <p><b>
         This area is filled mostly with warehouses for food and stables for travelers coming to visit the town.
         The area is named after a food market, where farmers often come to sell their goods.
+        As you look into the shops you see that both the buildings and the caves against which the houses are build are used as food storage.
     </b></p>
 
     <p>Main places of interest here:</p>
@@ -45,10 +46,11 @@
 
 {% block knowledges %}
     <dl class="dc">
-        <dt>LocalDC:</dt>
-        <dd>10 >= <a href="../../../characters/Taduan+hulorn-animal-merchant.html">Taduan</a> is the current hulorn</dd>
-        <dd>15 >= <a href="../../../characters/Taduan+hulorn-animal-merchant.html">Taduan Kaler</a> owns a lot of stables and is by far biggest cattle merchant in the area.</dd>
-        <dd>15 >= <a href="../../../characters/Otalan+food-and-drink-merchant.html">Otalan Hichek</a> is a big player on the food market.</dd>
+        <dt>GatherDC:</dt>
+        <dd>18 >= Messenger business has been hard since Faerun Trade Shop has been setting up its own teleportation based messaging service.</dd>
+        <dd>20 >= The rangers have a lot of deaths to morn last year. They disappeared without leaving a trace.</dd>
+        <dd>22 >= <a href="../../../characters/Taduan+hulorn-animal-merchant.html">Taduan Kaler</a> owns a lot of stables and is by far biggest cattle merchant in the area.</dd>
+        <dd>22 >= <a href="../../../characters/Otalan+food-and-drink-merchant.html">Otalan Hichek</a> is a big player on the food market.</dd>
     </dl>
 {% endblock %}
 
