--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/traders-guild.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/traders-guild.html
@@ -13,7 +13,11 @@
         <li>Just let the Faerun Trade Group do all the lifting.</li>
         <li>If they want to invest seriously he is prepared to give more information.</li>
     </ul>
-    <p>If adventurers come up with a serious investment.</p>
+    <p>
+        If adventurers come up with a serious investment a contract gets created in which the adventurers promise non-disclosure.
+        The contract also binds the Faerun Trade Group to share the profits made through the Global Convoy project
+        and the adventurers to pay a sum in gold.
+    </p>
     <ul>
         <li>He tells that Faerun Trade Group are working on a brilliant plan.</li>
         <li>You know about the import tax that Cormyr raises</li>
@@ -32,8 +36,10 @@
     </b></p>
 
     <p>
-        On the first floor are offices.
-        It contains administration about guild members and ...
+        On the first floor are offices. They contains administration about guild members.
+        And also hold copies of many big contracts made between merchants as a security measure against fire.
+        After three days you figure out that the FTG has a lot of investors in the Global Convoy project,
+        but so far little people have actually seen profit.
     </p>
 {% endblock %}
 
@@ -62,5 +68,8 @@
 {% endblock %}
 
 {% block misc %}
-    <p>no misc</p>
+    <p>
+        If you pass a LawyerDC15. You are hired to look into disputes that concern contracts that the Traders Guild is storing.
+        Your salary is 500gp a day.
+    </p>
 {% endblock %}
