Remove some noise from slum area's.

--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-first-day-in-Yauhnn/A0-talk-to-Janala.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-first-day-in-Yauhnn/A0-talk-to-Janala.html
@@ -1,1 +1,43 @@
-<p>She has a mission to find out why <a href="../../characters/Thekesh-Moltabar+naieve-entrepeneur.html">Thekesh</a> is buying out people.</p>
+{% extends "dnd/abstract/obstacle.html" %}
+
+{% block title %}Talk To Janala{% endblock %}
+{% block summary %}Janala is suspicious about an important member of the slum community and asks to investigate{% endblock %}
+
+{% block events %}
+    <p>no events</p>
+{% endblock %}
+
+{% block locations %}
+    <p>no locations</p>
+{% endblock %}
+
+{% block achievements %}
+    <p>
+        Janala gave the home address of <a href="../../characters/Thekesh-Moltabar+naieve-entrepeneur.html">Thekesh</a>
+        and adventurers could decide to <a href="A1-pay-Thekesh-a-visit.html">pay Thekesh a visit</a>.
+    </p>
+{% endblock %}
+
+{% block creatures %}
+    <p>no creatures</p>
+{% endblock %}
+
+{% block traps %}
+    <p>no traps</p>
+{% endblock %}
+
+{% block conditions %}
+    <p>no conditions</p>
+{% endblock %}
+
+{% block knowledges %}
+    <p>no knowledges</p>
+{% endblock %}
+
+{% block items %}
+    <p>no items</p>
+{% endblock %}
+
+{% block misc %}
+    <p>Handout: 07-All-Talk-with-Janala.odt</p>
+{% endblock %}
