--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-first-day-in-Yauhnn/C0-work-as-lawyer.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-first-day-in-Yauhnn/C0-work-as-lawyer.html
@@ -10,3 +10,8 @@
 <p>Whatever</p>
 
 <p>When FTG gets accused the Waukeen church will close their eyes to protect the community (to big to fail).</p>
+
+<p>
+        After three days you figure out that the FTG has a lot of investors in the Global Convoy project,
+        but so far little people have actually seen profit.
+</p>
