--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/breakers-slums.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/breakers-slums.html
@@ -17,7 +17,7 @@
 {% block locations %}
     <p><b>
         The houses here are nothing but a few wooden planks holding some fleece as a roof. Most houses do not even have a door.
-        It would probably smell terrible if the wind wasn't blowing so hard around here.
+        It would probably smell terrible if the wind wasn't blowing so fierce around here.
     </b></p>
 
     <p>Landmarks</p>
@@ -28,7 +28,7 @@
             Inside there are children with wounded hands.
         </li>
     </ul>
-    <p>Neighbooring area's</p>
+    <p>Neighbooring area's (describe the view)</p>
     <ul>
         <li>There is a stair winding up the cliff to <a href="temple-of-Valkur.html">Lighthouse / The Temple of Valkur</a></li>
         <li>The cliff face is crawling with small caves forming <a href="cave-slums.html">The Cave Slums</a></li>
@@ -38,14 +38,6 @@
         </li>
         <li>Breakers slums is closest to the open <a href="../sea.html">sea</a> (which brings some hazards)</li>
         <li>You can go to area where <a href="fisher-boats.html">fisher boats</a> are docked</li>
-    </ul>
-
-    <p>View</p>
-    <ul>
-        <li>The docks</li>
-        <li>Massive building with a huge round window showing a face enprofile in glass and lead (see ReligionDC)</li>
-        <li>Walls with a tower on sea side and some kind of fortress in the middle of the bay</li>
-        <li>Behind the ships the whole bank consists of noble houses. The ones closer to the water are smaller.</li>
     </ul>
 
     <p>Hidden locations</p>
