--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/cave-slums.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/cave-slums.html
@@ -11,7 +11,7 @@
     <p><b>
         Walking around you see many sheds setup in the cave complex.
         Many half-Locathah and some poor humans live here packed on each other.
-        Especially deeper into the caves it is filthy.
+        Especially deeper into the caves it is filthy and impossible to see without light.
         More towards the cliffs there is a wind coming from the sea, which makes it more bearable.
         These sheds also have a stunning view.
     </b></p>
