--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/fisher-boats.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/fisher-boats.html
@@ -14,7 +14,6 @@
         At night guards are walking the second tier of the city with torches.
         They overlook the fisher boats, but are not terribly enthusiastic to go down.
     </p>
-
     <p>
         As adventurers walk by during the day, <a href="../../../characters/Sjahnsesh+shark-hunter.html">Sjahnsesh</a>
         makes a remark about shabby equipment. He suggests to go to some good (shady) employers at
@@ -33,19 +32,12 @@
         <li>Fish stands</li>
         <li>Octopus stands</li>
     </ul>
-    <p>Neighbooring area's</p>
+    <p>Neighbooring area's (describe the view)</p>
     <ul>
         <li>Behind the fish nets there are entrances to <a href="slums-market.html">slums market</a></li>
         <li>Walk away from city center to <a href="breakers-slums.html">breakers-slums</a></li>
         <li>Go up the goods scale to <a href="../trade-district/food-market.html">food market</a> (Waukeen guards there, see knowledge)</li>
         <li>Walk towards city center to <a href="harbor-slums.html">harbor slums</a></li>
-    </ul>
-    <p>View</p>
-    <ul>
-        <li>The docks</li>
-        <li>Massive building with a huge round window showing a face enprofile in glass and lead (see ReligionDC)</li>
-        <li>Walls with a tower on sea side and some kind of fortress in the middle of the bay</li>
-        <li>Behind the ships the whole bank consists of noble houses. The ones closer to the water are smaller.</li>
     </ul>
 {% endblock %}
 
@@ -64,21 +56,21 @@
         <dd> 10 >= The men drinking are complaining about the little they earn with fish</dd>
         <dd>
             14 >= The men say that it is all <a href="../../../characters/Thekesh-Moltabar+naieve-entrepeneur.html">Moltabar's</a> fault
-            and that they wish they worked for <a href="../../../characters/Otalan+food-and-drink-merchant.html"></a>
+            and that they wish they worked for <a href="../../../characters/Otalan+food-and-drink-merchant.html">Otalan</a>
         </dd>
         <dd>
             18 >= The men drinking earn some money on the side at night for their hero
             <a href="../../../characters/Thekesh-Moltabar+naieve-entrepeneur.html">Thekesh</a></dd>
     </dl>
 
-     <dl class="dc">
-       <dt>SpotDC:</dt>
-       <dd> 10 >= There are guards watching out over the fishermen from food market. (see ReligionDC)</dd>
+    <dl class="dc">
+        <dt>SpotDC:</dt>
+        <dd> 10 >= There are guards watching out over the fishermen from food market. (see ReligionDC)</dd>
     </dl>
 
     <dl class="dc">
-       <dt>ReligionDC:</dt>
-       <dd> 10 >= The emblem the guards are wearing and is on the building at the base of the harbor is the Waukeen emblem</dd>
+        <dt>ReligionDC:</dt>
+        <dd> 10 >= The emblem the guards are wearing and is on the building at the base of the harbor is the Waukeen emblem</dd>
     </dl>
 {% endblock %}
 
