--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/harbor-slums.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/harbor-slums.html
@@ -18,7 +18,7 @@
         Trash from unloading ships lies around everywhere. There is also a faint smell of rotting fish.
     </b></p>
 
-    <p>From here adventurers can visit</p>
+    <p>From here adventurers can visit (tell about the view)</p>
     <ul>
         <li>Walk towards the docks for <a href="../trade-district/temple-of-Waukeen.html">Waukeen temple</a></li>
         <li>Walk towards the sea for <a href="fisher-boats.html">fisher boats</a></li>
@@ -30,13 +30,6 @@
         An inn called The Smiling Fish is the only noticeable place here.
     </p>
 
-    <p>View</p>
-    <ul>
-        <li>The docks</li>
-        <li>Massive building with a huge round window showing a face enprofile in glass and lead (see ReligionDC)</li>
-        <li>Walls with a tower on sea side and some kind of fortress in the middle of the bay</li>
-        <li>Behind the ships the whole bank consists of noble houses. The ones closer to the water are smaller.</li>
-    </ul>
 {% endblock %}
 
 {% block achievements %}
@@ -56,10 +49,7 @@
 {% endblock %}
 
 {% block knowledges %}
-    <dl class="dc">
-        <dt>ReligionDC:</dt>
-        <dd> 10 >= The emblem on the building at the base of the harbor is the Waukeen emblem</dd>
-    </dl>
+    <p>no knowledges</p>
 {% endblock %}
 
 {% block items %}
@@ -67,5 +57,5 @@
 {% endblock %}
 
 {% block misc %}
-    <p><a href="../../../characters/Mirika+insane-half-elf.html">Mirika</a> still has some belongings here.</p>
+    <p>no misc</p>
 {% endblock %}
