--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/sea-water-slums.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/sea-water-slums.html
@@ -31,7 +31,7 @@
         <li>This tunnel leads to an area where three Locathah hold guard</li>
         <li>The next chamber has a ceiling that is filled up with mithral at night (SpotDC10)</li>
         <li>A very narrow natural burrow leads to another chamber</li>
-        <li>The ceiling of this chamber is filled with dead fish at night. The burrow is hidden (SearchDC30)</li>
+        <li>The ceiling of this chamber is filled with dead fish at night. The burrow is hidden (SearchDC30) and there is a next room.</li>
         <li>The ceiling of this chamber has a hatch into one of the homes in <a href="breakers-slums.html">breakers slums</a></li>
         <li>The home is nothing but a shack. Nobody lives there, but boxes with dead fish get stored there and 3x Locathah hold guard.</li>
     </ol>
