--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/temple-of-Valkur.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/temple-of-Valkur.html
@@ -34,6 +34,7 @@
     <ul>
         <li>Secret door (SearchDC 25) behind alter to <a href="temple-of-Talos.html">temple of Talos</a></li>
         <li>Stairs down the cliff to <a href="cave-slums.html">cave slums</a></li>
+        <li>You can oversee the whole city from here</li>
     </ul>
 {% endblock %}
 
