--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/city-center.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/city-center.html
@@ -35,7 +35,7 @@
 {% endblock %}
 
 {% block achievements %}
-    <p>Frisked Mirika and asked inn keep about the key: handout 11-Mirikas-endeavor.odt</p>
+    <p>TODO: what can they undertake after Mirika's relevations?</p>
 {% endblock %}
 
 {% block creatures %}
@@ -64,5 +64,6 @@
 {% endblock %}
 
 {% block misc %}
+    <p>Frisked Mirika and asked inn keep about the key -> handout 11-Mirikas-endeavor.odt</p>
     <p>Both the buildings and the caves are used for storage.</p>
 {% endblock %}
