--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/traders-guild.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/traders-guild.html
@@ -2,7 +2,7 @@
 
 {% block title %}Traders Guild{% endblock %}
 {% block summary %}A luxurious guild for all merchants. Stock is "exchanged" here.{% endblock %}
-{% block todo %}Make selling pitch for Falok. What is in the offices? Lawyer work?{% endblock %}
+{% block todo %}Make selling pitch for Falok.{% endblock %}
 
 {% block events %}
     <p>If adventurers hang around long enough on ground floor following events take place.</p>
@@ -18,14 +18,6 @@
         The contract also binds the Faerun Trade Group to share the profits made through the Global Convoy project
         and the adventurers to pay a sum in gold.
     </p>
-    <ul>
-        <li>He tells that Faerun Trade Group are working on a brilliant plan.</li>
-        <li>You know about the import tax that Cormyr raises</li>
-        <li>Imagine that you can dive that tax and cut on transportation cost.</li>
-        <li>Your profit will hit the roof!</li>
-        <li>With a revolutionary Golem the FTG is planning to teleport huge amounts of goods past custody at low cost.</li>
-        <li>Goods are stored everywhere awaiting teleportation. Even in slums!</li>
-    </ul>
 {% endblock %}
 
 {% block locations %}
@@ -38,13 +30,15 @@
     <p>
         On the first floor are offices. They contains administration about guild members.
         And also hold copies of many big contracts made between merchants as a security measure against fire.
-        After three days you figure out that the FTG has a lot of investors in the Global Convoy project,
-        but so far little people have actually seen profit.
     </p>
 {% endblock %}
 
 {% block achievements %}
-    <p>no achievements</p>
+    <p>
+        After your first day roll random on <a href="../../../obstacles/03-first-day-in-Yauhnn/C0-work-as-lawyer.html">work as lawyer</a>
+        for discoveries every day.
+    </p>
+    <p>Learn about the Global Convoy Project</p>
 {% endblock %}
 
 {% block creatures %}
@@ -72,4 +66,5 @@
         If you pass a LawyerDC15. You are hired to look into disputes that concern contracts that the Traders Guild is storing.
         Your salary is 500gp a day.
     </p>
+    <p>Making a serious investment -> handout 12-All-Global-Convoy-Project.odt</p>
 {% endblock %}
