--- a/src/templatefiles/templates/dnd/concrete/characters/Thekesh-Moltabar+naieve-entrepeneur.html
+++ b/src/templatefiles/templates/dnd/concrete/characters/Thekesh-Moltabar+naieve-entrepeneur.html
@@ -29,12 +29,11 @@
 
 {% block stats %}
     <h4>Whereabouts</h4>
-    <p>During the morning he is Moltabar and is present in his shop.</p>
-    <p>During the afternoon and early evening he is asleep.</p>
-    <p>During the night he walks around in the slums. Roll random below to determine whereabouts</p>
     <ul>
-        <li>Slums market (bar)</li>
-        <li>Breakers slums (smuggle route)</li>
-        <li>Cave slums (shacks that lead to his shop)</li>
+        <li>06-12 -> Moltabar (in the shop)</li>
+        <li>12-15 -> Thekesh (market, breakers, cave)</li>
+        <li>15-18 -> Moltabar (in the shop)</li>
+        <li>18-00 -> a sleep (house of Moltabar)</li>
+        <li>00-06 -> Thekesh (seawater, breakers, cave, harbor)</li>
     </ul>
 {% endblock %}
