Add info to knowledge local.

--- a/src/templatefiles/templates/dnd/concrete/groups/Faerun-trade-group.html
+++ b/src/templatefiles/templates/dnd/concrete/groups/Faerun-trade-group.html
@@ -16,4 +16,17 @@
         <li><a href="../characters/Olivet+Magic-merchant.html">Olivet</a></li>
         <li><a href="../characters/Dragbar+metal-merchant.html">Dragbar</a> (steel and weapons merchant)</li>
     </ul>
+
+    <dl class="dc">
+        <dt>LocalDC:</dt>
+        <dd>
+            30 >= You know that the Faerun Trade Group is a collective of merchant that pick up prestigious projects to earn spectacularly
+            For many small matters the Hulorn has obsolute power.
+            For bigger decisions the Hulorn has to have a majority in his council.
+            For very big decisions there has to be a 2/3 majority in the council.
+        </dd>
+        <dd>32 >= Head of Waukeen temple named <a href="../characters/Valof+Waukeen-cleric.html">Valor</a> has initiated the group.</dd>
+        <dd>34 >= <a href="../characters/Olivet+Magic-merchant.html">Olivet</a> is also part of the group.</dd>
+        <dd>36 >= <a href="../characters/Dragbar+metal-merchant.html">Dragbar</a> is a Gold Dwarf that ownes a lot of mines and smiths and is part of the council.</dd>
+    </dl>
 {% endblock %}
