--- a/src/templatefiles/templates/dnd/concrete/groups/Yauhnn-merchant-council.html
+++ b/src/templatefiles/templates/dnd/concrete/groups/Yauhnn-merchant-council.html
@@ -24,5 +24,6 @@
         <dd>25 >= <a href="../characters/Otalan+food-and-drink-merchant.html">Otalan</a> is dealing in the finest food and drinks and is council member.</dd>
         <dd>26 >= <a href="../characters/Dragbar+metal-merchant.html">Dragbar</a> is a Gold Dwarf that ownes a lot of mines and smiths and is part of the council.</dd>
         <dd>28 >= <a href="../characters/Wehna+clothing-merchant.html">Wehna</a> (clothing) and <a href="../characters/Harar+wood-merchant.html">Harar</a> (wood) are both influential merchants in council.</dd>
+        <dd>30 >= You know something about the <a href="Faerun-trade-group.html">Faerun Trade Group</a>.</dd>
     </dl>
 {% endblock %}
